--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -8,11 +8,11 @@
 # Attack Animation Update
 # Double Counter
 # Triple Counter
-Enviromental Counter
+# Enviromental Counter
+# !Player turn foot sync ???
+# Player Attack Animations Check
+#  Attack Thug state bug fix ? can not reproduce NOW
+# AI Avoid Out of zone -> use CrowdManager
 
-AI Avoid Out of zone
- -> use CrowdManager
-
- Attack Thug state bug fix
-
-Player turn foot sync ???
+ Player Attack Rotation issue
+ Rethinking debug text and Log system -> Debug Hint Message ?
