--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -18,3 +18,4 @@
  Rethinking debug text and Log system -> Debug Hint Message ?
  Ragdoll out of world kill
  Thug Attack Rotate to Player
+ Camera Collision
