--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -28,10 +28,9 @@
 # Getup State attackable
 # Motion Player TimeScale test
 # Ragdoll out of world kill
- 
-
- Ragdoll Hit Direction Based on dock alignment bone position
+# Ragdoll Hit Direction Based on dock alignment bone position
  
  Player Attack Particle (Bigger and Smoke)
  New Character
  Clean up audio ogg file
+ Split crowd agent and animation node
