--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -28,8 +28,9 @@
 # Getup State attackable
 # Motion Player TimeScale test
 # Ragdoll out of world kill
-# Ragdoll Hit Direction Based on dock alignment bone position
- 
+# Ragdoll Hit Direction Based on dock alignment bone position, compare with position angle diff <----
+
+ Static ragdoll
  Player Attack Particle (Bigger and Smoke)
  New Character
  Clean up audio ogg file
